--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -5,8 +5,6 @@ on:
       - "*"
   workflow_dispatch:
 
-env:
-  ECR_REPO: public.ecr.aws/k1n1h4h4
   
 jobs:
   build:
@@ -18,16 +16,24 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: koteswarp
+          password: xGr7+H~=9.CYtvJ
       - name: Setup Dockerx
         uses: docker/setup-buildx-action@v1
-      - name: Build and push container images
+
+      - name: Build and push
+        id: docker_build
         uses: docker/build-push-action@v2
         with:
           build-args: |
             pkg_version=${{ steps.tag.outputs.tag }}
-          context: .
-          platforms: linux/amd64,linux/arm64
-          tags: |
+          context: ./
+          file: ./Dockerfile
           push: true
+          tags: koteswarp/simplewhale:latest
+
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
