--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -5,7 +5,6 @@ on:
       - "*"
   workflow_dispatch:
 
-  
 jobs:
   build:
     name: release
@@ -21,19 +20,25 @@ jobs:
         with:
           username: koteswarp
           password: xGr7+H~=9.CYtvJ
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
       - name: Setup Dockerx
         uses: docker/setup-buildx-action@v1
 
-      - name: Build and push
-        id: docker_build
+      - name: Build and push container images
         uses: docker/build-push-action@v2
         with:
           build-args: |
             pkg_version=${{ steps.tag.outputs.tag }}
-          context: ./
-          file: ./Dockerfile
+          context: .
+          platforms: linux/amd64,linux/arm64
+          tags: |
+             koteswarp/simplewhale:latest
           push: true
-          tags: koteswarp/simplewhale:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+
+
