--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: koteswarp
-          password: xGr7+H~=9.CYtvJ
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -35,7 +35,7 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           tags: |
-             koteswarp/simplewhale:latest
+             ${{ secrets.DOCKER_HUB_USERNAME }}/aws-privateca-issuer:v1.2.0
           push: true
 
       - name: Image digest
